--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,41 @@ body {
 	}
 
 	#map {
-	 height: 600px;
+	 height: 630px;
 	 margin: 15px auto;
 	}
+
+	  .leaflet-center {
+		left: 50%;
+		transform: translate(-50%, 0%);
+		}
+	
+		.leaflet-middle {
+		top: 50%;
+		position: absolute;
+		z-index: 1000;
+		pointer-events: none;
+	    transform: translate(0%, -50%);
+			
+		}
+	
+		.leaflet-center.leaflet-middle {
+	 	 transform: translate(-50%, -50%);
+		}
+		.leaflet-northwest{
+		top: 30%;
+		transform: translateY(170%);
+		padding-left: 10px;
+		}
+
+		.leaflet-southwest{
+			top: 70%;
+			transform: translateY(50%);
+			padding-left: 10px;
+			}
+
+		.map-text{
+			font-family: sans-serif ;
+			font-size: medium;
+
+		}
